# dashboard-web

./: Cargo.toml  README.md  config.toml  users.txt
.github/workflows/: build_and_release.yml
app/admin_dashboard/: Cargo.toml
app/admin_dashboard/src/: admin_command.rs  lib.rs
app/admin_dashboard/templates/: command_result.html
app/main/: Cargo.toml
app/main/src/: cli.rs  main.rs  routes.rs  templates.rs  user_management.rs
app/main/templates/: landing.html
app/router_admin/: Cargo.toml
app/router_admin/src/: admin_command.rs  lib.rs  templates.rs
app/router_admin/templates/: error.html
apps/action_dashboard/: Cargo.toml
apps/action_dashboard/src/: admin_executor.rs  lib.rs  templates.rs
apps/action_dashboard/templates/: action_dashboard.html  action_result.html  base.html  error.html
apps/admin_dashboard/: Cargo.toml
apps/admin_dashboard/src/: admin_cmd.rs  admin_command.rs  lib.rs  templates.rs
apps/admin_dashboard/templates/: admin_panels.html  base.html  command_result.html  error.html  landing.html
apps/auth_api/: Cargo.toml
apps/auth_api/src/: auth_cookie.rs  lib.rs  routes.rs  templates.rs
apps/auth_api/src/routes/: check.rs  check_auth.rs  login.rs  login_page.rs  logout.rs
apps/auth_api/templates/: base.html  login.html  login_error.html
apps/cli_user_management/: Cargo.toml
apps/cli_user_management/src/: lib.rs
apps/main/: Cargo.toml
apps/main/src/: main.rs  routes.rs  signal_handlers.rs  templates.rs
apps/main/templates/: landing.html
auth/: Cargo.toml
auth/src/: lib.rs  middleware.rs  models.rs  routes.rs  utils.rs
auth/src/routes/: check_cookie.rs  login.rs  logout.rs
auth/templates/: login.html
common/: Cargo.toml
common/app_errors/: Cargo.toml
common/app_errors/src/: lib.rs
common/auth/: Cargo.toml
common/auth/src/: auth_cookie.rs  lib.rs  middleware.rs  redirect_cookie.rs  subdomain.rs
common/config/: Cargo.toml
common/config/src/: access_check.rs  admin_command.rs  admin_config.rs  lib.rs  route_check.rs  user_config.rs
common/limiters_middleware/: Cargo.toml
common/limiters_middleware/src/: lib.rs  rate_limiter.rs
common/rate_limiter/: Cargo.toml
common/rate_limiter/src/: lib.rs
common/src/: config.rs  lib.rs  rate_limiter.rs  utils.rs
common/state/: Cargo.toml
common/state/src/: lib.rs  logging.rs  signal_handlers.rs
common/utils/: Cargo.toml
common/utils/src/: cache_remover.rs  http_helpers.rs  indexed_vector.rs  lib.rs  string_tuple_vec.rs
config/: Cargo.toml
config/src/: lib.rs  log_level.rs  route_check.rs  user_config.rs
example/: config.toml  users.txt
examples/: README.md  config.toml  dashboard-web.logrotate  fail2ban.conf  users_db.txt
examples/nginx/http.d/: server_common.include  subdomains.conf
examples/nginx/ssl/: nginx.cnf
package/: README.md  build-alpine.sh  config.toml  dashboard-web-init-script  home-webserver-init-script  install.sh  openrc-init  users.txt
package/nginx-example/: README.md
package/nginx-example/http.d/: auth.include  nginx.conf  root.conf
package/nginx-example/ssl/: generate_ssl.sh
static/css/: admin-panels.css  login.css  router-admin.css  styles.css
