[workspace]
members = [
    "app/*",
    "auth",
    "common",
]
resolver = "2"

[workspace.dependencies]
askama = "0.13.1"
#axum = { version = "0.8.3", features = ["macros"]}
axum = { version = "0.8.3" }
bcrypt = "0.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
time = "0.3.41"
toml = "0.8.20"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tower-cookies = "0.11.0"