[workspace]
resolver = "2"
members = [
    "apps/*",
    "common/*",
]

[profile.release]
strip = true
opt-level = "s"
lto = true


[workspace.dependencies]
app_errors = { path = "./common/app_errors" }
auth = { path = "./common/auth" }
config = { path = "./common/config" }
limiters_middleware = { path = "./common/limiters_middleware" }
state = { path = "./common/state" }
utils = { path = "./common/utils" }
# external
askama = "0.13.1"
axum = { version = "0.8.3", features = ["macros"]}
bcrypt = "0.17"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
time = "0.3.41"
toml = "0.8.20"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tower-cookies = "0.11.0"
url = "2.5.4"