[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
time.workspace = true
tracing.workspace = true

