[package]
name = "dashboard-web"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
config = { path = "../../config" }
auth = { path = "../../auth" }
admin_dashboard = { path = "../admin_dashboard" }
clap = { version = "4.4", features = ["derive"] }
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum-server = "0.7.2"

