[package]
name = "router_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
auth = { path = "../../auth" }
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum-server = "0.7.2"

