[package]
name = "action_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
state = { path = "../../common/state" }
auth = { path = "../../common/auth" }
config = { path = "../../common/config" }
limiters_middleware = { path = "../../common/limiters_middleware" }
utils = { path = "../../common/utils" }
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum-server = "0.7.2"

