[package]
name = "auth_api"
version = "0.0.0"
edition = "2024"

[dependencies]
app_errors.workspace = true
auth.workspace = true
config.workspace = true
limiters_middleware.workspace = true
state.workspace = true
utils.workspace = true
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
http.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true