[package]
name = "dashboard-web"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
axum-server = "0.7.2"
auth_api = { path = "../auth_api" }
action_dashboard = { path = "../action_dashboard" }
cli_user_management = { path = "../cli_user_management" }


app_errors.workspace = true
auth.workspace = true
config.workspace = true
limiters_middleware.workspace = true
state.workspace = true
utils.workspace = true
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true