[package]
name = "app_errors"
version = "0.0.0"
edition = "2024"

[dependencies]
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true