[package]
name = "auth"
version = "0.0.0"
edition = "2024"

[dependencies]
app_errors = { path = "../app_errors" }
config = { path = "../config" }
limiters_middleware = { path = "../../common/limiters_middleware" }
state = { path = "../state" }
# workspace
askama.workspace = true
axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
time.workspace = true
tracing.workspace = true

