[package]
name = "config"
version = "0.0.0"
edition = "2024"

[dependencies]
app_errors = { path = "../app_errors" }
utils = { path = "../utils" }
axum.workspace = true
bcrypt.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
time.workspace = true