[package]
name = "limiters_middleware"
version = "0.0.0"
edition = "2024"

[dependencies]
local_lru = "0.4.6"

axum.workspace = true
bcrypt.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
time.workspace = true